CNCS Dev 12/src/objects/Application3__c.object
<CustomObject>
    <fields>
        <fullName>Type_of_Applicant_3__c</fullName>
        <label>Type of Applicant 3</label>
        <picklist>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Applicant__c</fullName>
        <label>Type of Applicant 1</label>
        <picklist>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City or Township Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special District Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory or Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/State Controlled Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian/Native American Tribally Designated Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public/Indian Housing Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit with 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit without 501C3 IRS Status (Other than Institution of Higher Education)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Institution of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For-Profit Organization (Other than Small Business)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-serving Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black Colleges and Universities (HBCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska Native and Native Hawaiian Serving Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-domestic (non-US) Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <description>Type of Application</description>
        <inlineHelpText>Please select Type of Application</inlineHelpText>
        <label>Type of Application</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Submission__c</fullName>
        <description>Type of Submission</description>
        <inlineHelpText>Please select Type of Submission as required</inlineHelpText>
        <label>Type of Submission</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed/Corrected Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veterans__c</fullName>
        <label>Veterans</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Station_Supervisor_First_Name__c</fullName>
        <label>Volunteer Station Supervisor First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Station_Supervisor_Last_Name__c</fullName>
        <label>Volunteer Station Supervisor Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteers_Station_Name__c</fullName>
        <label>Volunteers Station Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Unduplicated_Volunteers__c</fullName>
        <label># of Unduplicated Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Greater_than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &lt;    TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The date cannot be prior to the current date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Greater_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &gt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The date must be after the date entered in field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>I_agree_the_cretification_rules</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( I_Agree__c )</errorConditionFormula>
        <errorDisplayField>I_Agree__c</errorDisplayField>
        <errorMessage>Please select the checkbox for accepting the Certification rules</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Picklist</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(
ISPICKVAL( Review_by_State_Under_Executive_Order__c ,&quot;b.Program is subject to E.O. 12372 but has not been selected by the State for review&quot; ), 
ISPICKVAL( Review_by_State_Under_Executive_Order__c ,&quot;c. Program is not covered by E.O. 12372.&quot; )),
NOT(ISBLANK( Date__c)))</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>You can enter a date only upon the selection of  &quot;option a&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provide_your_explanation_here</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Applicant_Delinquent_on_any_Federal_Debt__c, &quot;Yes&quot;), ISBLANK( If_Yes_provide_your_explination_here__c ) )</errorConditionFormula>
        <errorDisplayField>If_Yes_provide_your_explination_here__c</errorDisplayField>
        <errorMessage>Please provide your explanation here</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Secondary_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Review_by_State_Under_Executive_Order__c ,&quot;a.This application was made available to the State under the Executive Order 12372 Process for review on&quot; ),
    ISBLANK( Date__c))</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Please enter a date</errorMessage>
    </validationRules>
</CustomObject>